{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 92,
  "lineage": "be2a611e-5c56-52c6-5916-330545fcb7f7",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:security-group/sg-086ae0f4763e1f550",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086ae0f4763e1f550",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d198b534c61a0655"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "moz-health-dev20230314090440761400000015",
            "name_prefix": "moz-health-dev",
            "owner_id": "680148267093",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "moz-health-dev-eks_cluster_sg",
              "kubernetes.io/cluster/moz-health-dev": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "moz-health-dev-eks_cluster_sg",
              "kubernetes.io/cluster/moz-health-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4619ac6dcb6e9a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:security-group/sg-0d198b534c61a0655",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d198b534c61a0655",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-04cc7df1ed1a00f1f",
                  "sg-060a8e393f588a03b"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086ae0f4763e1f550"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-086ae0f4763e1f550"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "moz-health-dev20230314090440761800000016",
            "name_prefix": "moz-health-dev",
            "owner_id": "680148267093",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "moz-health-dev-eks_worker_sg",
              "kubernetes.io/cluster/moz-health-dev": "owned"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "moz-health-dev-eks_worker_sg",
              "kubernetes.io/cluster/moz-health-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4619ac6dcb6e9a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3411233222",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-086ae0f4763e1f550",
            "security_group_rule_id": "sgr-076e5dcdb1b50c42b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-410415970",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-086ae0f4763e1f550",
            "security_group_rule_id": "sgr-0466693676d0e8364",
            "self": false,
            "source_security_group_id": "sg-0d198b534c61a0655",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2361668735",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d198b534c61a0655",
            "security_group_rule_id": "sgr-04d15c83a9bce52aa",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-3887868087",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d198b534c61a0655",
            "security_group_rule_id": "sgr-05bd32a57a5d2c1d9",
            "self": false,
            "source_security_group_id": "sg-086ae0f4763e1f550",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3081308852",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d198b534c61a0655",
            "security_group_rule_id": "sgr-0408fe0fcd7553593",
            "self": false,
            "source_security_group_id": "sg-086ae0f4763e1f550",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-721122771",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d198b534c61a0655",
            "security_group_rule_id": "sgr-047b31e8dd1f61e1d",
            "self": false,
            "source_security_group_id": "sg-0d198b534c61a0655",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6f3b9db256c8170",
            "association_id": "eipassoc-0663989a3948c958d",
            "domain": "vpc",
            "id": "eipalloc-0e6f3b9db256c8170",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-09ccd4d487cfaa45d",
            "private_dns": "ip-192-168-2-104.ap-south-1.compute.internal",
            "private_ip": "192.168.2.104",
            "public_dns": "ec2-3-108-103-75.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.103.75",
            "public_ipv4_pool": "amazon",
            "tags": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "eip-moz-health-dev",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "eip-moz-health-dev",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:internet-gateway/igw-024943682c5b02e31",
            "id": "igw-024943682c5b02e31",
            "owner_id": "680148267093",
            "tags": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "moz-health-dev",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "moz-health-dev",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            },
            "vpc_id": "vpc-0f4619ac6dcb6e9a7"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6f3b9db256c8170",
            "connectivity_type": "public",
            "id": "nat-01ce6b2e2174a5365",
            "network_interface_id": "eni-09ccd4d487cfaa45d",
            "private_ip": "192.168.2.104",
            "public_ip": "3.108.103.75",
            "subnet_id": "subnet-09f962f506d6b6a40",
            "tags": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "nat-gw-moz-health-dev",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "nat-gw-moz-health-dev",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:route-table/rtb-0ec3be04585c5b915",
            "id": "rtb-0ec3be04585c5b915",
            "owner_id": "680148267093",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01ce6b2e2174a5365",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "private-moz-health-dev-rtb",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "private-moz-health-dev-rtb",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4619ac6dcb6e9a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:route-table/rtb-051abbcd7e333fb71",
            "id": "rtb-051abbcd7e333fb71",
            "owner_id": "680148267093",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024943682c5b02e31",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "public-moz-health-dev-rtb",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "public-moz-health-dev-rtb",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4619ac6dcb6e9a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064ea224dcf9e1672",
            "route_table_id": "rtb-0ec3be04585c5b915",
            "subnet_id": "subnet-00d75297743a1778d"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ac29b9f9db97df9",
            "route_table_id": "rtb-0ec3be04585c5b915",
            "subnet_id": "subnet-01087ede96fdea8b8"
          },
          "dependencies": [
            "module.network.aws_eip.eip",
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff8bf55e28aa991a",
            "route_table_id": "rtb-051abbcd7e333fb71",
            "subnet_id": "subnet-09f962f506d6b6a40"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb3451070a6e547a",
            "route_table_id": "rtb-051abbcd7e333fb71",
            "subnet_id": "subnet-02c0b2a716568a93f"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.internet_gateway",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:security-group/sg-020902e7c61c6d38c",
            "description": "Master nodes security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow outbound traffic to worker nodes",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057c9506e61f27cf6"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-020902e7c61c6d38c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with cluster API server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057c9506e61f27cf6"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "masters-moz-health-dev",
            "name_prefix": "",
            "owner_id": "680148267093",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "masters-moz-health-dev",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "masters-moz-health-dev",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4619ac6dcb6e9a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:security-group/sg-0cbb6ad336ac24a46",
            "description": "RDS Database security group",
            "egress": [],
            "id": "sg-0cbb6ad336ac24a46",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d198b534c61a0655"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with RDS database",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-057c9506e61f27cf6"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-moz-health-dev",
            "name_prefix": "",
            "owner_id": "680148267093",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-moz-health-dev"
            },
            "tags_all": {
              "Name": "db-moz-health-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4619ac6dcb6e9a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:security-group/sg-057c9506e61f27cf6",
            "description": "Security group for all worker nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057c9506e61f27cf6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020902e7c61c6d38c"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "nodes-moz-health-dev",
            "name_prefix": "",
            "owner_id": "680148267093",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "nodes-moz-health-dev",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "nodes-moz-health-dev",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f4619ac6dcb6e9a7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_nodes_egress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow outbound traffic to worker nodes",
            "from_port": 10250,
            "id": "sgrule-2273074513",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-020902e7c61c6d38c",
            "security_group_rule_id": "sgr-0dc05db4a31c7e9c9",
            "self": false,
            "source_security_group_id": "sg-057c9506e61f27cf6",
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.master_nodes_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_nodes_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with cluster API server",
            "from_port": 443,
            "id": "sgrule-4293820534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-020902e7c61c6d38c",
            "security_group_rule_id": "sgr-0663c21ccf01f8a46",
            "self": false,
            "source_security_group_id": "sg-057c9506e61f27cf6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.master_nodes_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_db_ingress_workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with RDS database",
            "from_port": 5432,
            "id": "sgrule-243150340",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cbb6ad336ac24a46",
            "security_group_rule_id": "sgr-0c8bb9f3b87671017",
            "self": false,
            "source_security_group_id": "sg-057c9506e61f27cf6",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.rds_db_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodes_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-766472253",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-057c9506e61f27cf6",
            "security_group_rule_id": "sgr-09e0d6945a7c1efe6",
            "self": false,
            "source_security_group_id": "sg-020902e7c61c6d38c",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.master_nodes_sg",
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_nodes_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other",
            "from_port": 0,
            "id": "sgrule-1260279145",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-057c9506e61f27cf6",
            "security_group_rule_id": "sgr-06d5df0d69081e90d",
            "self": false,
            "source_security_group_id": "sg-057c9506e61f27cf6",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.worker_nodes_sg",
            "module.network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:subnet/subnet-00d75297743a1778d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d75297743a1778d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680148267093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "ap-south-1b-moz-health-dev",
              "SubnetType": "Private",
              "kubernetes.io/cluster/moz-health-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "ap-south-1b-moz-health-dev",
              "SubnetType": "Private",
              "kubernetes.io/cluster/moz-health-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f4619ac6dcb6e9a7"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:subnet/subnet-01087ede96fdea8b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01087ede96fdea8b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680148267093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "ap-south-1a-moz-health-dev",
              "SubnetType": "Private",
              "kubernetes.io/cluster/moz-health-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "ap-south-1a-moz-health-dev",
              "SubnetType": "Private",
              "kubernetes.io/cluster/moz-health-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f4619ac6dcb6e9a7"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:subnet/subnet-09f962f506d6b6a40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.0.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f962f506d6b6a40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680148267093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "utility-ap-south-1b-moz-health-dev",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/moz-health-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "utility-ap-south-1b-moz-health-dev",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/moz-health-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f4619ac6dcb6e9a7"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:subnet/subnet-02c0b2a716568a93f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.8.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c0b2a716568a93f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "680148267093",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "utility-ap-south-1a-moz-health-dev",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/moz-health-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "KubernetesCluster": "moz-health-dev",
              "Name": "utility-ap-south-1a-moz-health-dev",
              "SubnetType": "Utility",
              "kubernetes.io/cluster/moz-health-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f4619ac6dcb6e9a7"
          },
          "dependencies": [
            "module.network.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:680148267093:vpc/vpc-0f4619ac6dcb6e9a7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09020ba397974382a",
            "default_route_table_id": "rtb-02f33b85e0805dcbc",
            "default_security_group_id": "sg-0fd254768d2c12349",
            "dhcp_options_id": "dopt-5e994435",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f4619ac6dcb6e9a7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f33b85e0805dcbc",
            "owner_id": "680148267093",
            "tags": {
              "Name": "moz-health-dev",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            },
            "tags_all": {
              "Name": "moz-health-dev",
              "kubernetes.io/cluster/moz-health-dev": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}